--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,9 +33,19 @@
 
 
 
+
+    <servlet>
+        <servlet-name>Completed</servlet-name>
+        <servlet-class>servlets.CompletedTaskServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.png</url-pattern>
+        <servlet-name>Completed</servlet-name>
+        <url-pattern>/completed</url-pattern>
     </servlet-mapping>
+
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>default</servlet-name>-->
+        <!--<url-pattern>*.png</url-pattern>-->
+    <!--</servlet-mapping>-->
 
 </web-app>
